# thermal-printer

./: Cargo.toml
examples/: Cargo.toml
examples/src/: main.rs
src/: lib.rs
