[package]
name = "thermal-printer-examples"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.12.0", features = ["hal"] }
embedded-hal = "0.2.6"
thermal-printer = { path = "../" }